# easyfold

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/easyfold/: main.py
backend/easyfold/af3_input/: __init__.py  _chain_ids.py  builder.py  exceptions.py  models.py  validator.py
backend/easyfold/api/: models.py  rate_limit.py
backend/easyfold/api/v1/: __init__.py  health.py  jobs.py  sequences.py
backend/easyfold/boltz_input/: __init__.py  builder.py  exceptions.py  validator.py
backend/easyfold/inference/: __init__.py  af3.py  boltz.py  boltz_app.py  boltz_output.py  colabfold.py  dispatch.py  input_prep.py  output_parse.py  result.py
backend/scripts/: update_openapi_snapshot.py
backend/tests/: conftest.py  test_health.py  test_properties.py
backend/tests/af3_input/: test_builder.py  test_chain_ids.py  test_models.py  test_validate.py
backend/tests/api/: conftest.py  openapi.snapshot.json  test_jobs.py  test_openapi_snapshot.py  test_sequences.py
backend/tests/boltz_input/: test_builder.py  test_validator.py
backend/tests/inference/: test_boltz_output.py  test_colabfold.py  test_dispatch.py  test_input_prep.py  test_output_parse.py  test_result.py
demo/: README.md  deploy.sh
docs/: ARCHITECTURE.md  ROADMAP.md  TASK_TEMPLATE.md
docs/decisions/: 0001-af3-input-mapping.md  0002-af3-on-modal.md  0003-boltz-on-modal-and-model-result.md  0004-jobs-api-modal-funcall-as-id.md
docs/release-notes/: v1.0.0.md
docs/screenshots/: CAPTURE.md
docs/tasks/: TASK-2.1.md  TASK-2.2.md  TASK-2.3.md  TASK-2.4.md  TASK-3.1.md  TASK-3.2.md  TASK-3.3.md  TASK-3.4.md  TASK-4.3.md  TASK-4.5.md  TASK-5.2.md
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/demo/_data/: examples.ts
frontend/app/demo/viewer/: page.tsx
frontend/app/demo/viewer/[id]/: page.tsx
frontend/app/predict/[jobId]/: page.tsx  predict-client.tsx
frontend/components/: logo.tsx
frontend/components/assembly-builder/: add-ligand-button.tsx  assembly-builder.tsx  assembly-card.tsx  chain-ids.test.ts  chain-ids.ts  index.ts  ligand-card.tsx  modifications-editor.tsx  predict-button.tsx  protein-card.tsx  ptm-types.ts  quick-start-chips.tsx  use-assembly-builder.test.ts  use-assembly-builder.ts
frontend/components/confidence-charts/: confidence-charts.tsx  index.ts  pae-heatmap.tsx  plddt-chart.tsx
frontend/components/example-card/: example-card.tsx
frontend/components/interpretation/: index.ts  interpretation-panel.tsx
frontend/components/prediction-result/: index.ts  prediction-result.tsx  status-banner.tsx
frontend/components/result-viewer/: result-viewer.tsx
frontend/components/sequence-input/: fasta-tab.tsx  id-lookup-tab.tsx  index.ts  predict-cta.tsx  sequence-input.tsx  sequence-result-card.tsx  use-sequence-lookup.ts
frontend/components/structure-viewer/: index.ts  structure-viewer.tsx
frontend/components/ui/: select.tsx
frontend/lib/: assembly.test.ts  assembly.ts  confidence.ts  fasta.ts  identifiers.ts  plddt-stats.test.ts  plddt-stats.ts
frontend/lib/api/: client.ts  index.ts  jobs.ts  types.ts
frontend/lib/llm/: index.ts  interpretation.ts
frontend/public/fixtures/: 1crn_confidence.json  1tup_confidence.json  6lu7.cif  6lu7_confidence.json  README.md
frontend/scripts/: copy-molstar.mjs  download-pdb-fixtures.mjs  generate-confidence-fixture.mjs
modal/: README.md  deploy.sh
scripts/: README.md
tests/: README.md
