[project]
name = "easyfold-backend"
version = "0.1.0"
description = "EasyFold FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"easyfold/external/exceptions.py" = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "live: hits real external APIs; skipped unless --live is passed",
]
