[project]
name = "easyfold-backend"
version = "0.1.0"
description = "EasyFold FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "modal>=1.4.3",
    "numpy>=2.4.6",
    "pydantic>=2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.47.0",
]

[project.optional-dependencies]
# Per-IP rate limiting on `POST /api/v1/jobs`. Enable via
# `uv sync --extra ratelimit` + set `EASYFOLD_RATE_LIMIT_JOBS_PER_IP_PER_HOUR`.
# Recommended only when serving the backend to untrusted clients — single-user
# self-host doesn't need this.
ratelimit = ["slowapi>=0.1.9"]

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"easyfold/external/exceptions.py" = ["N818"]
"easyfold/af3_input/exceptions.py" = ["N818"]
"easyfold/boltz_input/exceptions.py" = ["N818"]
"easyfold/inference/colabfold.py" = ["N818"]
"easyfold/inference/dispatch.py" = ["N818"]
# Tests intentionally embed non-ASCII letters to verify Unicode-rejection paths.
"tests/af3_input/test_validate.py" = ["RUF001"]
"tests/boltz_input/test_validator.py" = ["RUF001"]
# Test docstrings + headers use em/en-dashes for readability.
"tests/*.py" = ["RUF002", "RUF003"]
"tests/**/*.py" = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# slowapi is an optional dependency; mypy may not have it installed in CI.
# The runtime check in api/rate_limit.py handles the import-time fallback.
[[tool.mypy.overrides]]
module = ["slowapi", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "live: hits real external APIs; skipped unless --live is passed",
]
